# human_position_estimation

./: .gitignore  CMakeLists.txt  README.md  main.py  package.xml  point_cloud2.py  pointcloud.py
HARN/pose_finding/: pose_finding.py
HARN/rgb_detection/: cv_conversion.py
depth_mapping/: depth_mapping.py
human_aware_waypoints/: level_9_graph.py  move_along_roads.cpp  plotRoadNetwork.py  road_planner.py  upstairs.py  welcome_visitors.cpp
human_aware_waypoints/graphs/: logik.py
launch/: cv_convert.launch
modules/: __init__.py  cv_conversion.py  human_detection.py  person_detection.py  test.py
modules/detection/: real_time_object_detection.py
msg/: Detection.msg  Detections.msg  Distance.msg  Distances.msg  Pose.msg  Poses.msg  PositionMeasurement.msg  PositionMeasurementArray.msg
pose_finding/: pose_finding.py
rgb_detection/: cv_conversion.py  human_detection.py
src/pose_finding/: pose_finding.py
src/rgb_detection/: cv_conversion.py  human_detection.py
srv/: RequestDepth.srv  RequestDetection.srv
virtual-platform/: README.md
waypoints/: gotopose.py  move_along_roads.cpp  plotRoadNetwork.py  road_planner.py  waypoints_client.py  waypoints_server.py
waypoints/graphs/: __init__.py  logik.py  long_room.py  simulator.py
waypoints/helpers/: __init__.py  gotopose.py
