<?xml version="1.0"?>
<package>
  <name>3d_human_pose_estimation</name>
  <version>0.0.0</version>
  <description>Determine 3D pose of people in the map</description>

  <!-- Maintainer -->
  <maintainer email="itaouil@gmail.com">itaouil</maintainer>

  <!-- License -->
  <license>BSD</license>

  <!-- Website -->
  <url type="website">http://github.com/itaouil/HARN</url>

  <!-- Author -->
  <author email="itaouil95@gmail.com">Ilyass Taouil</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>aruco_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
